# corinna

./: CMakeLists.txt
examples/: corinna.cpp  cppcoro.cpp
include/corinna/: corinna.h  executor.h  socket.h  task.h
